--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -640,3 +640,8 @@ have a fixed width and height (but it's not required).
 #quote-form button {
   background-color: #01bdc9;
 }
+
+/* line 222, ../sass/_pages.scss */
+.breadcrumb-wrapper {
+  margin-top: 20px;
+}
