Redirect quick contact form to get quote form

--- a/home/templates/home/tags/main_slider.html
+++ b/home/templates/home/tags/main_slider.html
@@ -11,7 +11,7 @@
                 <div class="carousel-caption">
                     <img src="{% static 'img/slideshow/travel-is-education.png' %}" alt="">
                     <div class="text-center cta">
-                        <a href="/student-group-travel/tours/" class="cta-button">Browse Tours</a>
+                        <a href="/student-group-travel/" class="cta-button">Browse Tours</a>
                     </div>
                 </div>
                 {% endif %}
