--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -629,19 +629,21 @@ have a fixed width and height (but it's not required).
   color: #555;
   background-color: #fff;
   background-image: none;
-  border: 1px solid #ccc;
+  border: solid 0.5px #c6c6c6;
   border-radius: 4px;
+  -webkit-box-shadow: none;
+  box-shadow: none;
 }
-/* line 214, ../sass/_pages.scss */
+/* line 216, ../sass/_pages.scss */
 #quote-form textarea {
   height: 100px;
 }
-/* line 217, ../sass/_pages.scss */
+/* line 219, ../sass/_pages.scss */
 #quote-form button {
   background-color: #01bdc9;
 }
 
-/* line 222, ../sass/_pages.scss */
+/* line 224, ../sass/_pages.scss */
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
