--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -208,8 +208,10 @@
         color: #555;
         background-color: #fff;
         background-image: none;
-        border: 1px solid #ccc;
+        border: solid 0.5px #c6c6c6;
         border-radius: 4px;
+        -webkit-box-shadow: none;
+        box-shadow: none;
     }
     textarea {
         height: 100px;
