--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -4,26 +4,31 @@
            <div class="form-title">
                Quick Contact Form
            </div>
-           <form class="">
+           <form class="" action="/get-quote/" method="post">
+              {% csrf_token %}
                <div class="form-group">
-                   <input type="text" name="" placeholder="First Name" class="form-control" class="info">
+                  <input id="id_firstname" maxlength="255" name="firstname" type="text" required="" class="form-control" placeholder="First Name">
                </div>
                <div class="form-group">
-                   <input type="text" name="" placeholder="Last Name" class="form-control" class="info">
+                   <input id="id_lastname" maxlength="255" name="lastname" type="text" required="" class="form-control" placeholder="Last Name">
                </div>
                <div class="form-group">
-                  <select class="form-control">
-                      <option>Select your role</option>
+                  <select id="id_code-role" name="code-role" required="" class="form-control">
+                    <option value="">Select your role</option>
+                    <option value="Teacher">Teacher</option>
+                    <option value="Student">Student</option>
+                    <option value="Parent">Parent</option>
+                    <option value="Administrator">Administrator</option>
                   </select>
                </div>
                <div class="form-group">
-                   <input type="email" name="" placeholder="Email" class="form-control">
+                  <input id="id_email-address" name="email-address" type="email" required="" class="form-control" placeholder="Email">
                </div>
                <div class="form-group">
-                   <input type="text" name="" placeholder="Phone Number" class="form-control">
+                   <input id="id_phone-number" name="phone-number" step="any" type="number" required="" class="form-control" placeholder="Phone Number">
                </div>
                <div class="text-center">
-                   <button class="btn">Get Started</button>
+                   <button class="btn" type="submit">Get Started</button>
                </div>
            </form>
        </div>
