--- a/home/templates/home/tags/quick_contact_form.html
+++ b/home/templates/home/tags/quick_contact_form.html
@@ -7,13 +7,13 @@
            <form class="" action="/get-quote/" method="post">
               {% csrf_token %}
                <div class="form-group">
-                  <input id="id_firstname" maxlength="255" name="firstname" type="text" required="" class="form-control" placeholder="First Name">
+                  <input id="id_firstname" maxlength="255" name="first-name" type="text" required="" class="form-control" placeholder="First Name">
                </div>
                <div class="form-group">
-                   <input id="id_lastname" maxlength="255" name="lastname" type="text" required="" class="form-control" placeholder="Last Name">
+                   <input id="id_lastname" maxlength="255" name="last-name" type="text" required="" class="form-control" placeholder="Last Name">
                </div>
                <div class="form-group">
-                  <select id="id_code-role" name="code-role" required="" class="form-control">
+                  <select id="id_code-role" name="role" required="" class="form-control">
                     <option value="">Select your role</option>
                     <option value="Teacher">Teacher</option>
                     <option value="Student">Student</option>
@@ -22,7 +22,7 @@
                   </select>
                </div>
                <div class="form-group">
-                  <input id="id_email-address" name="email-address" type="email" required="" class="form-control" placeholder="Email">
+                  <input id="id_email-address" name="email" type="email" required="" class="form-control" placeholder="Email">
                </div>
                <div class="form-group">
                    <input id="id_phone-number" name="phone-number" step="any" type="number" required="" class="form-control" placeholder="Phone Number">
