--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -647,3 +647,7 @@ have a fixed width and height (but it's not required).
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
+/* line 226, ../sass/_pages.scss */
+.breadcrumb-wrapper .breadcrumb {
+  margin-bottom: 0px;
+}
