--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -137,59 +137,37 @@ have a fixed width and height (but it's not required).
   border-radius: 0;
   border-color: #e7e7e7;
 }
-/* line 36, ../sass/_header.scss */
+/* line 34, ../sass/_header.scss */
+.main-nav .navbar-header .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+/* line 43, ../sass/_header.scss */
 .main-nav .navbar-nav {
   display: inline-block;
   float: none !important;
   vertical-align: top;
 }
-/* line 40, ../sass/_header.scss */
-.main-nav .navbar-nav a {
+/* line 48, ../sass/_header.scss */
+.main-nav .navbar-nav li a {
   color: #fff;
   font-weight: bold;
 }
-/* line 43, ../sass/_header.scss */
-.main-nav .navbar-nav a:hover {
+/* line 51, ../sass/_header.scss */
+.main-nav .navbar-nav li a:hover {
   color: #00b19f !important;
   background-color: white;
 }
-/* line 51, ../sass/_header.scss */
-.main-nav .dropdown:hover .main-children {
-  display: block;
+/* line 58, ../sass/_header.scss */
+.main-nav .navbar-nav .open .highlighted {
+  color: #00b19f !important;
+  background-color: white;
 }
-/* line 54, ../sass/_header.scss */
-.main-nav .dropdown:hover .main-children li a {
+/* line 65, ../sass/_header.scss */
+.main-nav .navbar-nav .dropdown-menu li a {
   color: #333;
 }
-/* line 56, ../sass/_header.scss */
-.main-nav .dropdown:hover .main-children li a:hover {
-  background-color: #e8e8e8;
-  background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
-  background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#f5f5f5), to(#e8e8e8));
-  background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
-  background-repeat: repeat-x;
-  color: #333 !important;
-}
-/* line 71, ../sass/_header.scss */
-.main-nav .dropdown.open .dropdown-toggle {
-  background-image: -webkit-linear-gradient(top, #dbdbdb 0, #e2e2e2 100%);
-  background-image: -o-linear-gradient(top, #dbdbdb 0, #e2e2e2 100%);
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#dbdbdb), to(#e2e2e2));
-  background-image: linear-gradient(to bottom, #dbdbdb 0, #e2e2e2 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbdbdb', endColorstr='#ffe2e2e2', GradientType=0);
-  background-repeat: repeat-x;
-  -webkit-box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.075);
-  box-shadow: inset 0 3px 9px rgba(0, 0, 0, 0.075);
-  color: #00b19f;
-}
-/* line 84, ../sass/_header.scss */
-.main-nav .dropdown.open .dropdown-menu li a {
-  color: #333;
-}
-/* line 86, ../sass/_header.scss */
-.main-nav .dropdown.open .dropdown-menu li a:hover {
+/* line 67, ../sass/_header.scss */
+.main-nav .navbar-nav .dropdown-menu li a:hover {
   background-color: #e8e8e8;
   background-image: -webkit-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
   background-image: -o-linear-gradient(top, #f5f5f5 0, #e8e8e8 100%);
@@ -200,7 +178,7 @@ have a fixed width and height (but it's not required).
   color: #333 !important;
 }
 
-/* line 103, ../sass/_header.scss */
+/* line 83, ../sass/_header.scss */
 .navbar {
   position: relative;
   min-height: 50px;
@@ -208,6 +186,18 @@ have a fixed width and height (but it's not required).
   border: 0px;
 }
 
+@media only screen and (max-width: 768px) {
+  /* line 91, ../sass/_header.scss */
+  .navbar-nav {
+    float: left;
+    text-align: left;
+    width: 100%;
+  }
+  /* line 97, ../sass/_header.scss */
+  .navbar-nav .dropdown-menu li a {
+    color: #fff !important;
+  }
+}
 /* line 1, ../sass/_landing.scss */
 .masthead {
   background-image: url("../images/header.png");
