--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -29,70 +29,50 @@
 }
 
 .main-nav {
+    .navbar-header {
+        .navbar-toggle {
+            .icon-bar {
+                background-color: #fff;
+            }
+        }
+    }
     text-align: center;
     background: $dark-indigo;
     border-radius: 0;
-        border-color: #e7e7e7;
+    border-color: #e7e7e7;
     .navbar-nav {
         display: inline-block;
         float: none !important;
         vertical-align: top;
-        a {
-            color: $white;
-            font-weight: bold;
-            &:hover {
+        li {
+            a {
+                color: $white;
+                font-weight: bold;
+                &:hover {
+                    color: #00b19f !important;
+                    background-color: white;
+                }
+            }
+        }
+        .open {
+            .highlighted {
                 color: #00b19f !important;
                 background-color: white;
             }
         }
-    }
-    .dropdown{
-        &:hover {
-            .main-children {
-                display: block;
-                li {
-                    a {
-                        color: #333;
-                        &:hover {
-                                background-color: #e8e8e8;
-                                background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-                                background-image: -o-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-                                background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#e8e8e8));
-                                background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
-                                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
-                                background-repeat: repeat-x;
-                                color: #333!important;
-                        }
-                    }
-                }
-            }
-        }
-        &.open{
-            .dropdown-toggle{
-                    background-image: -webkit-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
-                    background-image: -o-linear-gradient(top,#dbdbdb 0,#e2e2e2 100%);
-                    background-image: -webkit-gradient(linear,left top,left bottom,from(#dbdbdb),to(#e2e2e2));
-                    background-image: linear-gradient(to bottom,#dbdbdb 0,#e2e2e2 100%);
-                    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffdbdbdb', endColorstr='#ffe2e2e2', GradientType=0);
-                    background-repeat: repeat-x;
-                    -webkit-box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
-                    box-shadow: inset 0 3px 9px rgba(0,0,0,.075);
-                    color: #00b19f;
-            }
-            .dropdown-menu {
-                li {
-                    a {
-                        color: #333;
-                        &:hover {
-                                background-color: #e8e8e8;
-                                background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-                                background-image: -o-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
-                                background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#e8e8e8));
-                                background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
-                                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
-                                background-repeat: repeat-x;
-                                color: #333!important;
-                        }
+        .dropdown-menu {
+            li {
+                a {
+                    color: #333;
+                    &:hover {
+                            background-color: #e8e8e8;
+                            background-image: -webkit-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
+                            background-image: -o-linear-gradient(top,#f5f5f5 0,#e8e8e8 100%);
+                            background-image: -webkit-gradient(linear,left top,left bottom,from(#f5f5f5),to(#e8e8e8));
+                            background-image: linear-gradient(to bottom,#f5f5f5 0,#e8e8e8 100%);
+                            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff5f5f5', endColorstr='#ffe8e8e8', GradientType=0);
+                            background-repeat: repeat-x;
+                            color: #333!important;
                     }
                 }
             }
@@ -105,4 +85,19 @@
     min-height: 50px;
     margin-bottom: 0px;
     border: 0px;
+}
+
+@media only screen and (max-width : 768px) {
+    .navbar-nav {
+        float: left;
+        text-align: left;
+        width: 100%;
+        .dropdown-menu {
+            li {
+                a {
+                    color: #fff !important;
+                }
+            }
+        }
+    }
 }
