Tours collection index changed to three columns and fixed blank items

--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -173,6 +173,12 @@
 
 .tours-container {
     margin-top: 20px;
+    .cta {
+        padding-top: 0px;
+    }
+    .testimonials {
+        margin-top: 0px;
+    }
     .panel {
         .panel-heading {
             padding: 0px;
