--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -584,31 +584,39 @@ have a fixed width and height (but it's not required).
 .tours-container {
   margin-top: 20px;
 }
-/* line 177, ../sass/_pages.scss */
+/* line 176, ../sass/_pages.scss */
+.tours-container .cta {
+  padding-top: 0px;
+}
+/* line 179, ../sass/_pages.scss */
+.tours-container .testimonials {
+  margin-top: 0px;
+}
+/* line 183, ../sass/_pages.scss */
 .tours-container .panel .panel-heading {
   padding: 0px;
 }
-/* line 179, ../sass/_pages.scss */
+/* line 185, ../sass/_pages.scss */
 .tours-container .panel .panel-heading .panel-image {
   width: 100%;
   height: 217.5px;
   overflow: hidden;
 }
-/* line 186, ../sass/_pages.scss */
+/* line 192, ../sass/_pages.scss */
 .tours-container .panel .panel-body h3 {
   margin-top: 0px;
   text-align: center;
 }
-/* line 190, ../sass/_pages.scss */
+/* line 196, ../sass/_pages.scss */
 .tours-container .panel .panel-body p {
   text-align: center;
 }
-/* line 193, ../sass/_pages.scss */
+/* line 199, ../sass/_pages.scss */
 .tours-container .panel .panel-body .view-tour {
   text-align: center;
 }
 
-/* line 201, ../sass/_pages.scss */
+/* line 207, ../sass/_pages.scss */
 #quote-form input, #quote-form select, #quote-form textarea {
   display: block;
   width: 100%;
@@ -624,20 +632,20 @@ have a fixed width and height (but it's not required).
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-/* line 216, ../sass/_pages.scss */
+/* line 222, ../sass/_pages.scss */
 #quote-form textarea {
   height: 100px;
 }
-/* line 219, ../sass/_pages.scss */
+/* line 225, ../sass/_pages.scss */
 #quote-form button {
   background-color: #01bdc9;
 }
 
-/* line 224, ../sass/_pages.scss */
+/* line 230, ../sass/_pages.scss */
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
-/* line 226, ../sass/_pages.scss */
+/* line 232, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb {
   margin-bottom: 0px;
 }
