--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -157,6 +157,13 @@
     padding-bottom: 5%;
 }
 
+.jcarousel-control-prev, .jcarousel-control-next {
+    img {
+        background-color: #ddd;
+        padding: 10px 15px;
+        border-radius: 20px;
+    }
+}
 
 
 
