--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -230,5 +230,49 @@
     margin-top: 20px;
     .breadcrumb {
         margin-bottom: 0px;
+        li {
+            a {
+                color: $cyan;
+            }
+        }
+    }
+}
+
+.testimonial-block {
+    .rich-text {   
+        p{
+            font-size: 16px;
+            line-height: 30px;
+            &:first-child {
+                &::before {
+                    content: '“';
+                    font-size: 20px;
+                }
+            }
+            &:last-child {
+                &::after {
+                    content: "”";
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+}
+
+.pager {
+    max-width: 850px;
+    margin: 0 auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    li {
+        a {
+            color: $cyan;
+        }
+        &:hover {
+            a {
+                background-color: $dark-indigo;
+                color: $white;
+            }
+        }
     }
 }
