--- a/website/templates/website/website_testimonals_index_page.html
+++ b/website/templates/website/website_testimonals_index_page.html
@@ -11,11 +11,10 @@
         {% for testimonial in testimonialpages %}
             <div class="item testimonial">
             {% with testimonial=testimonial.specific %}
-                <h2><a href="{% pageurl testimonial %}">{{ testimonial.title }}</a></h2>
-                <img src="{% static 'img/testimonial/quote.png' %}" alt="" style="float:left"
-                             class="quote">{{ testimonial.text|richtext }}<img
-                            src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close"
-                            style="float:right;margin-top: -30px;">
+                <h2>{{ testimonial.title }}</h2>
+                <div class="testimonial-block">
+                    {{ testimonial.text|richtext }}
+                </div>
                 <div class="clearfix"></div>
                 <p class="autor">
                    -{{ testimonial.full_name }}, {{ testimonial.organization }},
@@ -24,5 +23,21 @@
             {% endwith %}
             </div>
         {% endfor %}
+
+        {% if testimonialpages.paginator.num_pages > 1 %}
+        <ul class="pager">
+            {% if testimonialpages.has_previous %}
+                <li class="previous"><a href="?page={{ testimonialpages.previous_page_number }}">&larr; Previous</a></li>
+            {% endif %}
+
+            <span class="current">
+                Page {{ testimonialpages.number }} of {{ testimonialpages.paginator.num_pages }}
+            </span>
+
+            {% if testimonialpages.has_next %}
+                <li class="next"><a href="?page={{ testimonialpages.next_page_number }}">Next &rarr;</a></li>
+            {% endif %}
+        </ul>
+        {% endif %}
     </div>
 {% endblock %}
