--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -165,5 +165,35 @@
     }
 }
 
+@media only screen and (max-width : 768px) {
+    #main-carousel {
+        .left, .right {
+            .icon {
+                width: 30px;
+                height: 30px;
+                border-radius: 20px;
+            }
+        }
+        .carousel-caption {
+            img {
+                height: 100px;
+            }
+            .cta {
+                padding-top: 20px;
+                margin-bottom: -30px;
+                .cta-button {
+                    font-size: 14px;
+                    padding: 12px 15px;
+                }
+            }
+        }
+    }
+    .jcarousel-control-prev, .jcarousel-control-next {
+        img {
+            padding: 5px 8px;
+        }
+    }
+}
+
 
 
