--- a/fourwinds/static/css/style.css
+++ b/fourwinds/static/css/style.css
@@ -630,30 +630,35 @@ have a fixed width and height (but it's not required).
   margin-bottom: 20px;
 }
 /* line 182, ../sass/_pages.scss */
+.tours-container .panel:hover {
+  box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12), 0 3px 5px -1px rgba(0, 0, 0, 0.3);
+  transition: 0.25s;
+}
+/* line 188, ../sass/_pages.scss */
 .tours-container .panel .panel-heading {
   padding: 0px;
 }
-/* line 184, ../sass/_pages.scss */
+/* line 190, ../sass/_pages.scss */
 .tours-container .panel .panel-heading .panel-image {
   width: 100%;
   height: 217px;
   overflow: hidden;
 }
-/* line 191, ../sass/_pages.scss */
+/* line 197, ../sass/_pages.scss */
 .tours-container .panel .panel-body h3 {
   margin-top: 0px;
   text-align: center;
 }
-/* line 195, ../sass/_pages.scss */
+/* line 201, ../sass/_pages.scss */
 .tours-container .panel .panel-body p {
   text-align: center;
 }
-/* line 198, ../sass/_pages.scss */
+/* line 204, ../sass/_pages.scss */
 .tours-container .panel .panel-body .view-tour {
   text-align: center;
 }
 
-/* line 206, ../sass/_pages.scss */
+/* line 212, ../sass/_pages.scss */
 #quote-form input, #quote-form select, #quote-form textarea {
   display: block;
   width: 100%;
@@ -669,56 +674,56 @@ have a fixed width and height (but it's not required).
   -webkit-box-shadow: none;
   box-shadow: none;
 }
-/* line 221, ../sass/_pages.scss */
+/* line 227, ../sass/_pages.scss */
 #quote-form textarea {
   height: 100px;
 }
-/* line 224, ../sass/_pages.scss */
+/* line 230, ../sass/_pages.scss */
 #quote-form button {
   background-color: #01bdc9;
 }
 
-/* line 229, ../sass/_pages.scss */
+/* line 235, ../sass/_pages.scss */
 .breadcrumb-wrapper {
   margin-top: 20px;
 }
-/* line 231, ../sass/_pages.scss */
+/* line 237, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb {
   margin-bottom: 0px;
 }
-/* line 234, ../sass/_pages.scss */
+/* line 240, ../sass/_pages.scss */
 .breadcrumb-wrapper .breadcrumb li a {
   color: #01bdc9;
 }
 
-/* line 243, ../sass/_pages.scss */
+/* line 249, ../sass/_pages.scss */
 .testimonial-block .rich-text p {
   font-size: 16px;
   line-height: 30px;
 }
-/* line 247, ../sass/_pages.scss */
+/* line 253, ../sass/_pages.scss */
 .testimonial-block .rich-text p:first-child::before {
   content: '“';
   font-size: 20px;
 }
-/* line 253, ../sass/_pages.scss */
+/* line 259, ../sass/_pages.scss */
 .testimonial-block .rich-text p:last-child::after {
   content: "”";
   font-size: 20px;
 }
 
-/* line 262, ../sass/_pages.scss */
+/* line 268, ../sass/_pages.scss */
 .pager {
   max-width: 850px;
   margin: 0 auto;
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 268, ../sass/_pages.scss */
+/* line 274, ../sass/_pages.scss */
 .pager li a {
   color: #01bdc9;
 }
-/* line 272, ../sass/_pages.scss */
+/* line 278, ../sass/_pages.scss */
 .pager li:hover a {
   background-color: #102633;
   color: #fff;
