--- a/fourwinds/static/sass/_pages.scss
+++ b/fourwinds/static/sass/_pages.scss
@@ -179,6 +179,12 @@
         }
     }
     .panel {
+        &:hover {
+            box-shadow: 0 6px 10px 0 rgba(0,0,0,0.14),
+                        0 1px 18px 0 rgba(0,0,0,0.12),
+                        0 3px 5px -1px rgba(0,0,0,0.3);
+            transition: 0.25s;
+        }
         .panel-heading {
             padding: 0px;
             .panel-image {
