--- a/website/templates/website/website_contact_us_page.html
+++ b/website/templates/website/website_contact_us_page.html
@@ -5,12 +5,12 @@
 {% block content %}
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8 col-md-offset-2">
                 <div class="row margin-t-20">
-                    <div class="col-md-9">
+                    <div class="col-md-8">
                         <div id="gmap"></div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-4">
                         <b>Address:</b><br>
                         30 Jericho Executive Plaza<br>
                         Suite 500E<br>
@@ -24,15 +24,14 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12 margin-t-20">
+            <div class="col-md-8 col-md-offset-2 margin-t-20">
                 <p>{{ page.intro | richtext }}</p><br>
-                <h3 class="text-center">Email Us!</h3>
                 <div class="margin-t-20 homepage-body-content">
                     <div class="row">
-                        <form action="{% pageurl page %}" method="POST" id="quote-form">
+                        <form action="{% pageurl page %}" method="POST" class="custom-form">
                             {% csrf_token %}
                             {% for field in form %}
-                                <div class="col-md-6">
+                                <div class="col-md-12">
                                     <div class="form-group">
                                         <label>{{ field.label }}:</label>
                                         {{ field }}
@@ -42,7 +41,7 @@
                             {% endfor %}
                             <div class="col-md-12">
                                 <div class="col-md-4 col-md-offset-4 btn-center">
-                                    <button type="submit" class="btn btn-lg btn-block">Submit</button>
+                                    <button type="submit" class="btn btn-lg btn-block">Send Message</button>
                                 </div>
                             </div>
                         </form>
