--- a/fourwinds/static/sass/_header.scss
+++ b/fourwinds/static/sass/_header.scss
@@ -49,7 +49,7 @@
                 color: $white;
                 font-weight: bold;
                 &:hover {
-                    color: #00b19f !important;
+                    color: #00b19f;
                     background-color: white;
                 }
             }
@@ -93,6 +93,14 @@
         float: left;
         text-align: left;
         width: 100%;
+        li {
+            a {
+                &:hover {
+                    color: #fff !important;
+                    background-color: transparent !important;
+                }
+            }
+        }
         .dropdown-menu {
             display: block;
             position: static;
@@ -108,6 +116,9 @@
                     color: #fff !important;
                     padding:5px 15px 5px 25px;
                     line-height:20px;
+                    &:hover {
+                        color: #fff !important;
+                    }
                 }
             }
         }
