Change testimonials slider heading

--- a/website/templates/website/tags/testimonials.html
+++ b/website/templates/website/tags/testimonials.html
@@ -2,7 +2,7 @@
 {#    Testimonials#}
             <div class="text-center testimonials">
                 <h3 class="font-size-14 bold-regular">
-                    SEE WHAT OUR GUESTS HAVE TO SAY...
+                    HERE'S WHAT OUR CLIENTS HAVE TO SAY:
                 </h3>
                 <div class="box">
                     <div id="testimonials-carousel" class="container carousel" data-ride="carousel">
