--- a/home/templates/home/tags/top_menu.html
+++ b/home/templates/home/tags/top_menu.html
@@ -4,7 +4,7 @@
 {#        Top bar#}
 <div class="header-text text-center">
     <div class="container">
-        <p>SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES | CALL FOR A CUSTOM QUOTE (800) 896-3858 | <a href="#"><span class="icon ion-search"></span></a></p>
+        <p>SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES | CALL FOR A CUSTOM QUOTE (800) 896-3858</p>
     </div>
 </div>
 <div class="top-banner">
