Shorten header message in mobile

--- a/home/templates/home/tags/top_menu.html
+++ b/home/templates/home/tags/top_menu.html
@@ -4,7 +4,8 @@
 {#        Top bar#}
 <div class="header-text text-center">
     <div class="container">
-        <p>SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES | CALL FOR A CUSTOM QUOTE (800) 896-3858</p>
+        <p class="hidden-xs">SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES | CALL FOR A CUSTOM QUOTE (800) 896-3858</p>
+        <p class="hidden-sm hidden-md hidden-lg">FREE CUSTOM QUOTE (800) 896-3858</p>
     </div>
 </div>
 <div class="top-banner">
