--- a/fourwinds/static/sass/_landing.scss
+++ b/fourwinds/static/sass/_landing.scss
@@ -174,7 +174,7 @@
     }
 }
 
-@media only screen and (max-width : 768px) {
+@media (max-width : 560px) {
     #main-carousel {
         .left, .right {
             .icon {
@@ -183,9 +183,53 @@
                 border-radius: 20px;
             }
         }
+        .carousel-inner {
+            .item {
+                .carousel-item {
+                    height: 200px;
+                }
+            }
+        }
         .carousel-caption {
             img {
                 height: 100px;
+            }
+            .cta {
+                padding-top: 20px;
+                margin-bottom: 0px;
+                .cta-button {
+                    font-size: 12px;
+                    padding: 12px 16px;
+                }
+            }
+        }
+    }
+    .jcarousel-control-prev, .jcarousel-control-next {
+        img {
+            padding: 5px 8px;
+        }
+    }
+}
+
+@media (max-width : 768px) and (min-width : 560px) {
+    #main-carousel {
+        .left, .right {
+            .icon {
+                width: 30px;
+                height: 30px;
+                border-radius: 20px;
+            }
+        }
+        .carousel-inner {
+            .item {
+                .carousel-item {
+                    height: 250px;
+                }
+            }
+        }
+        .carousel-caption {
+            img {
+                height: 150px;
             }
             .cta {
                 padding-top: 20px;
@@ -197,9 +241,37 @@
             }
         }
     }
-    .jcarousel-control-prev, .jcarousel-control-next {
-        img {
-            padding: 5px 8px;
+}
+
+@media (max-width : 1150px) and (min-width : 769px) {
+    #main-carousel {
+        .left, .right {
+            .icon {
+                width: 30px;
+                height: 30px;
+                border-radius: 20px;
+            }
+        }
+        .carousel-caption {
+            img {
+                height: 200px;
+            }
+            .cta {
+                padding-top: 20px;
+                margin-bottom: -30px;
+                .cta-button {
+                    font-size: 14px;
+                    padding: 12px 15px;
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 1150px) {
+    .carousel-caption {
+        .cta {
+            margin-bottom: 30px;
         }
     }
 }
